--- a/CRYPTO MASTERY PROGRAM/about.html
+++ b/CRYPTO MASTERY PROGRAM/about.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/376a6ce090.js" crossorigin="anonymous">    </script>
-    <link rel="stylesheet" href="/static/main.css">
-    <script src="/main.js"></script>
-    <link rel="shortcut icon" href="/img/bitcoin-2.jpeg" type="image/x-icon">
+    <link rel="stylesheet" href="static/main.css">
+    <link rel="shortcut icon" href="img/bitcoin-2.jpeg" type="image/x-icon">
     <title>Crypto Mastery - About Us</title>
 </head>
 <body>
@@ -31,7 +30,7 @@
                 </div>
         </div>
         <div class="hero-image"> 
-            <img src="/img/bitcoin-1.jpeg" alt="Crypto Trading">
+            <img src="img/bitcoin-1.jpeg" alt="Crypto Trading">
         </div>
     </section>
 
