--- a/CRYPTO MASTERY PROGRAM/Index.html
+++ b/CRYPTO MASTERY PROGRAM/Index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/376a6ce090.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> -->
-    <link rel="stylesheet" href="/static/main.css">
-    <link rel="shortcut icon" href="/img/bitcoin-1.jpeg" type="image/x-icon">
+    <link rel="stylesheet" href="static/main.css">
+    <link rel="shortcut icon" href="img/bitcoin-1.jpeg" type="image/x-icon">
     <title>Crypto Mastery</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="hero-image"> 
-            <img src="/img/bitcoin-2.jpeg" class="bit-1" alt="Crypto Trading">
+            <img src="img/bitcoin-2.jpeg" class="bit-1" alt="Crypto Trading">
         </div>
     </section>
 
